--- a/Index.html
+++ b/Index.html
@@ -50,7 +50,8 @@
             </div>
         </div>
     </div>
-    <script src="uy.js"></script>
+    <script src="Script.js"></script>
 </body>
+
 
 </html>
